Fixed the local name being cut off

--- a/client/src/components/views/UploadProductPage/UploadProductPage.css
+++ b/client/src/components/views/UploadProductPage/UploadProductPage.css
@@ -1,29 +1,29 @@
-.wrap__totalUploadPage{
+.wrap__totalUploadPage {
   margin: 3rem auto;
   width: 95%;
   padding-bottom: 5rem;
 }
 
-.wrap__titleUploadPage{
+.wrap__titleUploadPage {
   display: flex;
   justify-content: center;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .ant-form label {
   font-size: 25px;
   color: black;
   font-weight: 600;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .ant-input {
   font-size: 18px;
   font-weight: 500;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.btn_upload{
+.btn_upload {
   width: 12%;
 }
 
@@ -32,19 +32,19 @@
 }
 
 .input-data {
-	width:100%;
-	border:1px solid #aaa;
-	border-radius:4px;
-	margin: 8px 0;
-	outline: none;
-	padding: 10px;
-	box-sizing: border-box;
-	transition:.2s;
+  width: 100%;
+  border: 1px solid #aaa;
+  border-radius: 4px;
+  margin: 8px 0;
+  outline: none;
+  padding: 10px;
+  box-sizing: border-box;
+  transition: 0.2s;
 }
 
-.input-data:focus{
-	border-color:dodgerBlue;
-	box-shadow:0 0 8px 0 dodgetBlue;
+.input-data:focus {
+  border-color: dodgerBlue;
+  box-shadow: 0 0 8px 0 dodgetBlue;
 }
 
 .input-data-input {
@@ -57,12 +57,12 @@
 }
 
 .select-data {
-  width: 6rem !important;
+  width: 7rem !important;
   height: 3rem !important;
   font-size: 18px;
   font-weight: 500;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   padding: 8px;
-	border-radius:4px;
-	border:1px solid #aaa;
+  border-radius: 4px;
+  border: 1px solid #aaa;
 }
